added many tests and also components

--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -1,5 +1,5 @@
 .top-bar, .top-bar ul {
-  background-color: $nav-background !important;
+  background-color: $nav-background ;
 }
 
 .top-bar {
@@ -9,6 +9,6 @@
 }
 
 .menu > .menu-text a {
-  display: inline !important;
+  display: inline ;
   padding: 0 ;
 }
