--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -6,3 +6,9 @@ $grey: #333333 ;
 
 $nav-background: $grey;
 $nav-text-color: white;
+
+
+//Clock variables
+$clock-text-color: white;
+$clock-bg-color: #b5d0e2;
+$clock-border-color: #2099e8;
