--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'base/variables';
 @import 'components/navigation';
 @import 'components/clock';
+@import 'components/controls';
 
 .active {
   font-weight: bold;
