added test for countdown and some css for it, countdown finished

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'components/navigation';
 @import 'components/clock';
 @import 'components/controls';
-
+@import 'components/page-title';
 .active {
   font-weight: bold;
 }
