--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,18 @@
 @import 'base/variables';
+
+
+//Foundation
+@import 'base/foundation-settings';
+@import 'foundation';
+@include foundation-everything;
+
+
+// Components
 @import 'components/navigation';
 @import 'components/clock';
 @import 'components/controls';
 @import 'components/page-title';
+
 .active {
   font-weight: bold;
 }
